Fix PropertyType.toXML/validateXML logic.   Check all MetaData property types, make sure that toXml()/toString()/validateXml() are strictly  locale-independent, toDisplayValue()/validateInputString() are locale-dependent