@@ -15,7 +15,6 @@ import java.math.BigDecimal;
 import java.text.DecimalFormat;
 import java.text.NumberFormat;
 import java.text.ParseException;
-import java.util.Locale;
 
 import org.eclipse.birt.report.model.api.metadata.PropertyValueException;
 import org.eclipse.birt.report.model.api.util.StringUtil;
@@ -218,48 +217,31 @@ public class FloatPropertyType extends PropertyType
 	public Object validateInputString( ReportDesign design, PropertyDefn defn,
 			String value ) throws PropertyValueException
 	{
-		return validateInputString( value, ThreadResources.getLocale( ) );
-	}
-
-	/**
-	 * Validates the locale-dependent value for the float type, validate the
-	 * <code>value</code> in the locale-dependent way and convert the
-	 * <code>value</code> into a Double object.
-	 * 
-	 * @param value
-	 *            the value to validate
-	 * @param locale
-	 *            the locale information
-	 * @return object of type Double or null if <code>value</code> is null.
-	 * @throws PropertyValueException
-	 */
-
-	public Object validateInputString( String value, Locale locale )
-			throws PropertyValueException
-	{
 		value = StringUtil.trimString( value );
-		if ( value == null )
-			return null;
+        if ( value == null )
+            return null;
 
-		NumberFormat localeFormatter = NumberFormat
-				.getNumberInstance( locale );
-		Number number = null;
-		try
-		{
-			// Parse in locale-dependent way.
-			// Use the decimal separator from the locale.
-			number = localeFormatter.parse( value );
-		}
-		catch ( ParseException e )
-		{
-			throw new PropertyValueException( value,
-					PropertyValueException.DESIGN_EXCEPTION_INVALID_VALUE,
-					NUMBER_TYPE );
-		}
+        NumberFormat localeFormatter = NumberFormat
+                .getNumberInstance( ThreadResources.getLocale() );
+        Number number = null;
+        try
+        {
+            // Parse in locale-dependent way.
+            // Use the decimal separator from the locale.
+            
+            number = localeFormatter.parse( value );
+        }
+        catch ( ParseException e )
+        {
+            throw new PropertyValueException( value,
+                    PropertyValueException.DESIGN_EXCEPTION_INVALID_VALUE,
+                    NUMBER_TYPE );
+        }
 
-		return new Double( number.doubleValue( ) );
+        return new Double( number.doubleValue( ) );
 	}
 
+	
 	/**
 	 * Returns a new <code>Double</code> initialized to the value represented
 	 * by the specified <code>String</code>.
@@ -277,7 +259,8 @@ public class FloatPropertyType extends PropertyType
 		try
 		{
 			//Locale-independent way
-			return new Double( Double.parseDouble( value ) );
+
+            return Double.valueOf( value );
 		}
 		catch ( NumberFormatException e )
 		{
